@@ -3,6 +3,8 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- fix scheduler ignore empty array jobset
+
 - fix scheduler delete jobset if no defined job left
 
 - move scheduler functions in services.inc to new include scheduler.inc
